Try fix error response api spec so that merging succeeds
