# components/renku_data_services/resource_usage/api.spec.yaml
@@ -317,8 +317,15 @@ components:
             message:
               type: string
               example: "Something went wrong - please try again later"
-          required: ["code", "message"]
-      required: ["error"]
+            trace_id:
+              type: string
+              example: "ac93950e9e114a55c67fb8e5ef519bbe"
+              description: Sentry trace ID for linking to corresponding log entries
+          required:
+            - "code"
+            - "message"
+      required:
+        - "error"
     Ulid:
       description: ULID identifier
       type: string
