# components/renku_data_services/resource_usage/apispec.py
@@ -1,9 +1,10 @@
 # generated by datamodel-codegen:
 #   filename:  api.spec.yaml
-#   timestamp: 2026-02-20T09:44:00+00:00
+#   timestamp: 2026-03-04T10:36:46+00:00
 
 from __future__ import annotations
 
+from datetime import date
 from typing import Optional
 
 from pydantic import ConfigDict, Field, RootModel
@@ -30,7 +31,10 @@ class ResourceClassCostPut(BaseAPISpec):
     model_config = ConfigDict(
         extra="forbid",
     )
-    cost: int
+    cost: int = Field(
+        ...,
+        description="The cost of a resource class is an integer that specifies\nthe effective cost of a session using this class running\nfor one hour.\n",
+    )
 
 
 class ResourceClassCost(BaseAPISpec):
@@ -59,6 +63,11 @@ class Error(BaseAPISpec):
     message: str = Field(
         ..., examples=["Something went wrong - please try again later"]
     )
+    trace_id: Optional[str] = Field(
+        None,
+        description="Sentry trace ID for linking to corresponding log entries",
+        examples=["ac93950e9e114a55c67fb8e5ef519bbe"],
+    )
 
 
 class ErrorResponse(BaseAPISpec):
@@ -73,6 +82,11 @@ class Ulid(RootModel[str]):
         min_length=26,
         pattern="^[0-7][0-9A-HJKMNP-TV-Z]{25}$",
     )
+
+
+class ResourcePoolsResourcePoolIdUsageGetParametersQuery(BaseAPISpec):
+    start_date: Optional[date] = None
+    end_date: Optional[date] = None
 
 
 class ResourcePoolUsage(BaseAPISpec):
